--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -340,6 +340,29 @@ Reno, NV 89503
 
 
 %**************************************************************
+%                     PUBLICATIONS
+%*************************************************************
+\section{Publications}
+\begin{outerlist}
+
+\item Technical Reviewer\\
+Prateek Joshi\\
+``OpenCV with Python By Example", Packt Publishing, October 2015\\
+\href{https://www.packtpub.com/application-development/opencv-python-example}{link}
+
+\item Technical Reviewer\\
+Garcia, Aranda, Suarez, Tercero,\\
+``Learning Image Processing with OpenCV", Packt Publishing, March 2015\\
+\href{https://www.packtpub.com/application-development/learning-image-processing-opencv}{link}
+
+\item Marvin Smith, Ara Nefian, 
+``Outlier removal in stereo reconstructions of orbital images", 
+International Symposium on Visual Computing, 2010.
+
+\end{outerlist}
+
+
+%**************************************************************
 %                      EDUCATION
 %**************************************************************
 \section{Education}
@@ -382,23 +405,6 @@ Reno, NV
         \href{http://www.lackland.af.mil/}
              {Lackland Air Force Base, TX}, November 2006\\
         \end{innerlist}
-\end{outerlist}
-
-
-%**************************************************************
-%                     PUBLICATIONS
-%*************************************************************
-\section{Publications}
-\begin{outerlist}
-\item Marvin Smith, Ara Nefian, 
-``Outlier removal in stereo reconstructions of orbital images", 
-International Symposium on Visual Computing, 2010.
-
-    \item Technical Reviewer\\
-     Garcia, Aranda, Suarez, Tercero,\\
-     ``Learning Image Processing with OpenCV", Packt Publishing, March 2015\\
-    \href{https://www.packtpub.com/application-development/learning-image-processing-opencv}{link}
-
 \end{outerlist}
 
 
