--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -321,7 +321,7 @@ Reno, NV 89503
 \item{\textbf{Software Experience}:} 
    \begin{outerlist}
    \item Image Processing : OpenCV, Matlab, NASA Vision Workbench
-   \item GIS : GDAL, GeoServer, OpenLayers, Google Earth Enterprise deployments
+   \item GIS : GDAL, GeoServer, libLAS (lidar), GeographicLib, OpenLayers, Google Earth Enterprise deployments
    \item Distributed Computing : MPI, IBVerbs, RDMA, BSD Sockets
    \item Python : matplotlib, NumPy, SymPy, pyqt
    \end{outerlist}
