Adding the reprojection project code.

--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -380,7 +380,7 @@ Reno, NV
         \item Adviser:
               \href{http://www.cse.unr.edu/~bebis/}
                    {Dr. George Bebis}
-        \item Area of Interest: Computer Vision, Artificial Intelligence, Image Processing
+        \item Areas of Interest: Computer Vision, Image Processing
         \item Specialized Undergraduate Courses: Computer Vision, Advanced Computer Vision, 
               Artificial Intelligence, Simulation Physics, and Image Processing.
         \item Graduate Courses Completed: Machine Learning, Computer Graphics, Patent Law (Business School).\\
@@ -421,7 +421,6 @@ Reno, NV
 \section{Groups}
 \begin{outerlist}
 \item[] \href{http://www.cse.unr.edu/~acm/}{President, Association for Computing Machinery}, UNR  (Jan 2010 - May 2011)
-\item[] Member, Resource Protection Team, 152 Security Forces Squadron, NVANG 
 \end{outerlist}
 
 %**************************************************************
