--- a/latex/Resume/cover-letter.tex
+++ b/latex/Resume/cover-letter.tex
@@ -1,41 +1,54 @@
-\documentclass[12pt,sigleft]{letter}
+\documentclass[12pt]{letter}
 
 
 \usepackage{hyperref}
 \usepackage{fullpage}
 
-\signature{Marvin Smith}
-\address{207 Imperial Blvd\\ Reno, NV, 89503}
 
+\longindentation=0pt 
+
+\signature{Marvin Smith}
+\address{Marvin Smith\\207 Imperial Blvd\\ Reno, NV, 89503}
 
 \begin{document}
 
-\begin{letter}{Drone Deploy}
+\begin{letter}{}
 
-\opening{Dear Drone Deploy}
+\opening{Dear Drone Deploy,}
 
-I am writing to you to express my interest in the Python Software Engineer position with your company.  
-I believe that I have the requisite knowledge and experience to provide valuable contributions to
-your company.
 
-Currently, I am a Software Engineer with the Sierra Nevada Corporation in Sparks, NV.  My primary focus 
-is in Photogrammetry and Computer Vision for the Intelligence, Surveillance, and Reconnaissance division.  
-I write most of my daily code in C++, however I do extensive prototyping and testing
-in Python.  Specifically, I spend considerable time using GDAL and OpenCV in both Python and C++.
-In addition, I spend considerable time integrating that in
+I am writing to you to express my interest in the Python Software Engineer position. I believe that I have 
+the requisite knowledge and experience to provide valuable contributions to your company.
+
+
+Currently, I am a Software Engineer with the Sierra Nevada Corporation in Sparks, NV. My primary focuses are in 
+photogrammetry and distributed computing for the Intelligence, Surveillance, and Reconnaissance (ISR) division. 
+Specifically, I develop image processing software for military UAS applications, most notably, Gorgon Stare. 
+Most of my work has me writing in C++, however I do extensive prototyping, testing, and system administration in Python. 
+The primary software libraries I use are GDAL and OpenCV for both Python and C++. 
+Other packages I use in my work include MPI, GeographicLib, libLAS, and Eigen.
+
+
+Prior to working at the Sierra Nevada Corporation, I was able to gain notable experience while interning at the NASA Ames 
+Research Center in Mountain View, CA. For two summers, I worked on satellite imagery of the Lunar and Martian surface. 
+This required developing C++ software for the NASA Vision Workbench which was run on the Pleiades Supercomputer. 
+In addition to valuable internships during college, I was an Air Force avionics technician.   
+As an avionics technician, I repaired and maintained C-130 Navigation, Communication, and Electronic Counter-Measure equipment. 
+
+
+I have a strong passion for cartography, image processing, and navigation.
+These interests drive me to participate in other projects. I have contributed code to the OpenCV
+project. Specifically, I created the drivers in the new OpenCV 3.0 release to incorporate GDAL to the 
+OpenCV image IO library. Finally, I was a technical reviewer for two OpenCV books, one focusing on C++ 
+and the other on Python.
+
+
+I believe that I have a wide array of skills to offer as well as the drive and ability to pick up new ones. Thank you very much for your time.
 
 
 \closing{Sincerely,}
-
 \end{letter}
+
 \end{document}
 
 
-
-%Currently, I am a software engineer with the Sierra Nevada Corporation. I specialize in Image Processing and Computer Vision for the Intelligence, Surveillance, and %Reconnaissance Division. My primary project is developing a distributed, multi-processor image processing platform for use in US Air Force Unmanned Aerial Systems. %Specifically, I am responsible for the development of the image ortho-rectification pipeline, an MPI communication framework, GIS-related libraries such as coordinate %transforms and vector/shapefile processing, and the underlying Linux/Unix-like framework for managing our software. Our software development team is very small, so I have had %the unique opportunity to have a large range of tasks. Some libraries which I have considerable experience with are GDAL, OpenCV, NGA GeoTrans, NASA Vision Workbench, and %MPI. 
-
-%In addition to my current job, I have also worked as an intern at the NASA Ames Research Center in Mountain View, CA. For two summers, I worked on satellite imagery of the %Lunar and Martian surface. This required developing C++ software for the NASA Vision Workbench which was run on the Pleiades Supercomputer. With this internship, I was able %to publish academic research as an undergraduate student and develop valuable C++ skills. Recently, I also completed a 7 year enlistment with the Nevada Air National Guard. %During my enlistment, I was an avionics technician where I repaired and maintained C-130 Navigation, Communication, and Electronic Counter-Measure equipment. I have %familiarity with maps, navigational instruments, and avionics.
-%
-%In addition to my work experience, I am also contributing code to the OpenCV project. Specifically, I am trying to add support for GDAL to the OpenCV image IO library.
-%
-%In conclusion, I believe that I have a wide array of skills to offer as well as the ability to pick up new ones. I am very passionate about GIS software and I hope to have %the opportunity to contribute to the Apple Maps platform.
