Added robotics stuff to resume.

--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -412,8 +412,12 @@ Reno, NV
 %                   Volunteering
 %**************************************************************
 \section{Volunteering}
+\textbf{Coach, Codebusters First Tech Challenge Robotics Team}\\
+    Boys and Girls Club of Truckee Meadows\\
+    May 2016 - Present\\
+
 \textbf{Mentor, Boys and Girls Club of Truckee Meadows}\\
-    March 2015 - Present
+    March 2015 - May 2016
 
 %**************************************************************
 %                      GROUPS
