Updating the resume with minor asthetic edits.

--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -73,7 +73,7 @@
             %includefoot, % Uncomment to put page number above margin
             marginparwidth=1.2in,     % Length of section titles
             marginparsep=.05in,       % Space between titles and text
-            margin=1in,               % 1 inch margins
+            margin=0.75in,               % 1 inch margins
             includemp]{geometry}
 
 %% Use these lines for A4-sized paper
@@ -241,8 +241,9 @@ Reno, NV 89503
         \end{innerlist}
      \item Tasks:
      \begin{innerlist}
-         \item Currently assisting with image processing and algorithm development for wide-area surveillance systems.  
-               Primary focuses are in distributed computing, camera calibration, orthographic rectification, and photogrammetry. 
+         \item Currently working on image processing for wide-area surveillance systems.  
+               Primary focuses are in remote sensing, distributed computing, camera calibration, 
+               orthographic rectification, and photogrammetry. 
          \item Assisted with development of OS security hardening procedures and ensured compliance with DoD Security 
                Technical Implementation Guides (STIGs) for Windows and Linux systems.
          \item Assisted with training of technician personnel for project software and hardware.\\
@@ -286,6 +287,8 @@ Reno, NV 89503
       \end{innerlist}
       \end{outerlist}
 
+\clearpage
+
 %CVL
 \href{http://www.cse.unr.edu/CVL/}
      {\textbf{Undergraduate Assistant, Computer Vision Lab}},\\
@@ -297,18 +300,7 @@ Reno, NV 89503
         \item CS 302, Data Structures: CS 474, Image Processing: CS 485, Computer Vision\\
         \end{innerlist}
      \end{outerlist}
-%NATC
-\href{http://www.natc-ht.com}
-     {\textbf{Co-Op, Special Programs Division}},\\
-     Nevada Automotive Test Center, Silver Springs, NV \\
-     May 2009 - January 2010
-     \begin{outerlist}
-     \item Primary task was to aid in the testing and implementation of electronic systems for
-           the USMC Marine Personnel Carrier Technology Demonstrator vehicle.
-     \item Wrote feasibility reports on electrical systems used, researched and compared
-           COTS electronic solutions with Mil-Std and SAE requirements, 
-           as well as bench-tested electronic systems prior to installation.
-     \end{outerlist}
+
 
 %**************************************************************
 %                     TECHNICAL SKILLS
@@ -321,8 +313,8 @@ Reno, NV 89503
 \item{\textbf{Software Experience}:} 
    \begin{outerlist}
    \item Image Processing : OpenCV, Matlab, NASA Vision Workbench
-   \item GIS : GDAL, GeoServer, libLAS (lidar), GeographicLib, OpenLayers, Google Earth Enterprise deployments
-   \item Distributed Computing : MPI, IBVerbs, RDMA, BSD Sockets
+   \item GIS : GDAL, GeoServer, libLAS (lidar), and GeographicLib
+   \item Distributed Computing : MPI, IBVerbs, RDMA, and BSD Sockets
    \item Python : matplotlib, NumPy, SymPy, pyqt
    \end{outerlist}
 
@@ -346,13 +338,11 @@ Reno, NV 89503
 \begin{outerlist}
 
 \item Technical Reviewer\\
-Prateek Joshi\\
-``OpenCV with Python By Example", Packt Publishing, October 2015\\
+Prateek Joshi, ``OpenCV with Python By Example", Packt Publishing, October 2015, 
 \href{https://www.packtpub.com/application-development/opencv-python-example}{link}
 
 \item Technical Reviewer\\
-Garcia, Aranda, Suarez, Tercero,\\
-``Learning Image Processing with OpenCV", Packt Publishing, March 2015\\
+Garcia, Aranda, Suarez, Tercero, ``Learning Image Processing with OpenCV", Packt Publishing, March 2015, 
 \href{https://www.packtpub.com/application-development/learning-image-processing-opencv}{link}
 
 \item Marvin Smith, Ara Nefian, 
@@ -387,6 +377,7 @@ Reno, NV
         \end{innerlist}
 \end{outerlist}
 
+\clearpage
 %UNITED STATES AIR FORCE
 \href{http://www.af.mil/}{\textbf{Nevada Air National Guard}}
 152 Maintenance Squadron, 152 Air Wing, Reno, NV
