Updating job title in resume.

--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -230,7 +230,7 @@ Reno, NV 89503
 \section{Work Experience}
 %SNC
 \href{http://www.sncorp.com}{
-     \textbf{Software Engineer 3, ISR Division}}\\
+     \textbf{Senior Software Engineer, ISS Division}}\\
      Sierra Nevada Corporation, Sparks, NV\\
      January 2012 - Present
      \begin{outerlist}
