--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -242,7 +242,7 @@ Reno, NV 89503
      \item Tasks:
      \begin{innerlist}
          \item Currently working on image processing for wide-area surveillance systems.  
-               Primary focuses are in remote sensing, distributed computing, camera calibration, 
+               Primary focuses are in remote sensing, high-performance computing, camera calibration, 
                orthographic rectification, and photogrammetry. 
          \item Assisted with development of OS security hardening procedures and ensured compliance with DoD Security 
                Technical Implementation Guides (STIGs) for Windows and Linux systems.
