--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -243,7 +243,7 @@ Reno, NV 89503
      \begin{innerlist}
          \item Currently working on image processing for wide-area surveillance systems.  
                Primary focuses are in remote sensing, high-performance computing, camera calibration, 
-               orthographic rectification, and photogrammetry. 
+               and photogrammetry. 
          \item Assisted with development of OS security hardening procedures and ensured compliance with DoD Security 
                Technical Implementation Guides (STIGs) for Windows and Linux systems.
          \item Assisted with training of technician personnel for project software and hardware.\\
