--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -422,20 +422,21 @@ Reno, NV
 %                   REFERENCES 
 %**************************************************************
 \section{References}
-\begin{itemize}
+Available Upon Request
+%\begin{itemize}
 %\item Samuel Hancock\\
 %      Technical Director, Sierra Nevada Corporation\\
 %      Phone: 775-849-6244
-\item Dr. George Bebis\\
-      Chair, Department of Computer Science and UNR Computer Vision Lab Director\\
-      Phone: 775-784-6463
-\item Dr. Ara Nefian\\
-      Senior Research Scientist, NASA Ames Research Center\\
-      Phone: 650-604-0845
-\item Technical Sergeant Rebecca Varnum\\
-      Guidance and Control Shop Supervisor, 152 MXS, NVANG\\
-      Phone: 775-788-4565
-\end{itemize}
+%\item Dr. George Bebis\\
+%      Chair, Department of Computer Science and UNR Computer Vision Lab Director\\
+%      Phone: 775-784-6463
+%\item Dr. Ara Nefian\\
+%      Senior Research Scientist, NASA Ames Research Center\\
+%      Phone: 650-604-0845
+%\item Technical Sergeant Rebecca Varnum\\
+%      Guidance and Control Shop Supervisor, 152 MXS, NVANG\\
+%      Phone: 775-788-4565
+%\end{itemize}
 \end{document}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%% End CV Document %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
