Updating resume again.

--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -234,7 +234,7 @@ Reno, NV 89503
      Sierra Nevada Corporation, Sparks, NV\\
      January 2012 - Present
      \begin{outerlist}
-         \item Currently working on image processing applications for wide-area surveillance programs.  
+         \item Currently working on image processing applications for DoD UAV platforms.  
          \item Primary fields of expertise are in remote sensing and high-performance computing.  
          \item Some examples of specific tasks
                I have performed include designing ortho-rendering algorithms on multi-node clusters, 
