--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -234,17 +234,23 @@ Reno, NV 89503
      Sierra Nevada Corporation, Sparks, NV\\
      January 2012 - Present
      \begin{outerlist}
-         \item Currently working on image processing applications for DoD UAV platforms.  
+         \item Currently the Lead Developer for the Image-Processing software team on the Gorgon
+               Stare Wide-Area Surveillance System.
          \item Primary fields of expertise are in remote sensing and high-performance computing.  
-         \item Some examples of specific tasks
-               I have performed include designing ortho-rendering algorithms on multi-node clusters, 
-               transferring terabytes of data over high speed networks (10 Gig Fiber, 40 GigE, and IB), 
-               creating and writing GIS data to various DOD formats (still imagery, motion imagery, vector data) 
-               using open-source and proprietary APIs, and building camera model equations for different sensors.  
-         \item I have also developed much of the build, 
-               unit-test, continuous-integration, and deployment infrastructure required.
+         \item Examples of tasks I have performed...
+         \begin{innerlist}
+            \item Designed and implementing ortho-image rendering algorithms for use on airborne systems as well as HPC clusters.
+            \item Reverse-engineered camera calibration equations to incorporate new camera models.
+            \item Designed and implemented image stabilization algorithms.
+            \item Developed algorithms to transfer terabytes of data in real-time over high speed networks.
+            \item Create and write GIS data (still imagery, motion imagery, vector data) to desired formats
+                  such as Pixia NUI, NITF, KML, MPEG/H264, Shapefiles, etc.
+            \item Assisted in the development of new camera models for multi-camera sensors.
+         \item I have also developed and managed much of the build, 
+               unit-test, continuous-integration, and deployment infrastructure required by our team.
          \item Assisted with development of OS security hardening procedures and ensured compliance with DoD Security 
                Technical Implementation Guides (STIGs) for Windows and Linux systems.\\
+         \end{innerlist}
      \end{outerlist}
 
 %USAF
