Update for address.

--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -214,10 +214,10 @@
 \newlength{\rcollength}\setlength{\rcollength}{2.95in}%
 %
 \begin{tabular}[t]{@{}p{\textwidth-\rcollength}p{\rcollength}}
-207 Imperial Blvd, 
+1750 Wewatta St, Unit 1300, 
 & \textsl{E-mail:} 
 \href{mailto:marvin\_smith1@me.com}{marvin\_smith1@me.com}\\
-Reno, NV 89503
+Denver, CO, 80202
 & \textsl{Cell:} (775) 997-4261 \\          
 & \textsl{www:} \href{http://marvinsmith3.wordpress.com}{http://marvinsmith3.wordpress.com}\\
 & \textsl{Github:} \href{http://github.com/marvins}{http://github.com/marvins}\\
@@ -408,7 +408,7 @@ Reno, NV
 \section{Volunteering}
 \textbf{Coach, Codebusters First Tech Challenge Robotics Team}\\
     Boys and Girls Club of Truckee Meadows\\
-    May 2016 - Present\\
+    May 2016 - February 2020\\
 
 \textbf{Mentor, Boys and Girls Club of Truckee Meadows}\\
     March 2015 - May 2016
