Update for address.

--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -239,7 +239,7 @@ Denver, CO, 80202
          \item Primary fields of expertise are in remote sensing and high-performance computing.  
          \item Examples of tasks I have performed...
          \begin{innerlist}
-            \item Designed and implementing ortho-image rendering algorithms for use on airborne systems as well as HPC clusters.
+            \item Designed and implemented ortho-image rendering algorithms for use on airborne systems as well as HPC clusters.
             \item Reverse-engineered camera calibration equations to incorporate new camera models.
             \item Designed and implemented image stabilization algorithms.
             \item Developed algorithms to transfer terabytes of data in real-time over high speed networks.
