Update for address.

--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -314,10 +314,9 @@ Denver, CO, 80202
 
 \item{\textbf{Software Experience}:} 
    \begin{outerlist}
-   \item Image Processing : OpenCV, Matlab, NASA Vision Workbench
-   \item GIS : GDAL, GeoServer, libLAS (lidar), GeographicLib (EGM96/geoid APIs), some ArcPy
-   \item Distributed Computing : MPI, IBVerbs, RDMA, and BSD Sockets
-   \item Python : matplotlib, NumPy, SymPy, pyqt
+   \item Image Processing : OpenCV, Matlab, NASA Vision Workbench, scikit
+   \item GIS APIs : GDAL, ArcGIS, GeoServer, libLAS (lidar), GeographicLib (EGM96/geoid APIs), some ArcPy
+   \item Distributed Computing : MPI, IBVerbs, libRDMA, and BSD Sockets
    \end{outerlist}
 
 \item{\textbf{Open-Source Projects Contributed:}}
@@ -325,7 +324,7 @@ Denver, CO, 80202
     \item OpenCV, NASA Vision Workbench
     \end{outerlist}
 
-\item{\textbf{System Administration}:} Secure Configuration Management deployment (git, svn, Artifactory), constructing software build systems (Jenkins), and some computer networking.
+\item{\textbf{System Administration}:} Configuration Management deployment (git, svn, Artifactory), constructing software build systems (Jenkins), and some networking to setup software labs.
 
 \item{\textbf{Mechanical}:} Electronics repair, Soldering, Hand/Power Tools, use of 
                      Military/Civilian technical manuals and wiring diagrams.
