Updating Resume with Ceres and some extra packages.

--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -240,7 +240,7 @@ Denver, CO, 80202
          \item Examples of tasks I have performed...
          \begin{innerlist}
             \item Designed and implemented ortho-image rendering algorithms for use on airborne systems as well as HPC clusters.
-            \item Reverse-engineered camera calibration equations to incorporate new camera models.
+            \item Developed camera calibration process using feature detection and optimization.
             \item Designed and implemented image stabilization algorithms.
             \item Create and write GIS data (still imagery, motion imagery, vector data) to desired formats
                   such as Pixia NUI, NITF, KML, MPEG/H264, Shapefiles, etc.
@@ -317,6 +317,7 @@ Denver, CO, 80202
    \item Image Processing : OpenCV, Matlab, NASA Vision Workbench, scikit
    \item GIS APIs : GDAL, ArcGIS, GeoServer, libLAS (lidar), GeographicLib (EGM96/geoid APIs), some ArcPy
    \item Distributed Computing : MPI, IBVerbs, libRDMA, and BSD Sockets
+   \item Scientific APIs:  Eigen, Ceres, GMP, NumPy/SciPy, and Pandas
    \end{outerlist}
 
 \item{\textbf{Open-Source Projects Contributed:}}
