Updating with test and systems work

--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -230,7 +230,7 @@ Denver, CO, 80202
 \section{Work Experience}
 %SNC
 \href{http://www.sncorp.com}{
-     \textbf{Senior Software Engineer, ISR, Aviation, and Security (IAS) Division}}\\
+     \textbf{Principal Software Engineer, ISR, Aviation, and Security (IAS) Division}}\\
      Sierra Nevada Corporation, Sparks, NV\\
      January 2012 - Present
      \begin{outerlist}
@@ -240,16 +240,19 @@ Denver, CO, 80202
          \item Examples of tasks I have performed...
          \begin{innerlist}
             \item Designed and implemented ortho-image rendering algorithms for use on airborne systems as well as HPC clusters.
-            \item Developed camera calibration process using feature detection and optimization.
+            \item Developed camera calibration process using feature detection and optimization algorithms.
             \item Designed and implemented image stabilization algorithms.
             \item Create and write GIS data (still imagery, motion imagery, vector data) to desired formats
                   such as Pixia NUI, NITF, KML, MPEG/H264, Shapefiles, etc.
             \item Assisted in the development of new camera models for multi-camera sensors.
+            \item Designed, written, and traced system and software requirements.  I've helped create and modify requirements to fulfill customer needs against technical constraints.
+            \item Significant test experience.  I've written test plans, test cards, and mapped test activities against system requirements.  I can boil down a complex activity such as measuring ground-location-accuracy of an ortho-image into a process test personnel can replicate and sign off on.
          \item I have also developed and managed much of the build, 
                unit-test, continuous-integration, and deployment infrastructure required by our team.
          \item Assisted with development of OS security hardening procedures and ensured compliance with DoD Security 
-               Technical Implementation Guides (STIGs) for Windows and Linux systems.\\
+               Technical Implementation Guides (STIGs) for Windows and Linux systems.
          \end{innerlist}
+         \item Active DOD security clearance.\\
      \end{outerlist}
 
 %USAF
@@ -266,7 +269,6 @@ Denver, CO, 80202
            August 2009 - December 2009
      \item Operation Iraqi Freedom Deployment, Talil AB, Iraq\\               
            October 2007 - January 2008
-     \item Active Security Clearance\\
      \end{outerlist}
 %NASA
 \href{http://ti.arc.nasa.gov/tech/asr/intelligent-robotics/}
