--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -231,29 +231,39 @@ Denver, CO, 80202
 %SNC
 \href{http://www.sncorp.com}{
      \textbf{Principal Software Engineer, ISR, Aviation, and Security (IAS) Division}}\\
-     Sierra Nevada Corporation, Sparks, NV\\
+     Sierra Nevada Corporation, Englewood, CO\\
      January 2012 - Present
      \begin{outerlist}
-         \item Currently the Lead Developer for the Image-Processing software team on the Gorgon
-               Stare Wide-Area Surveillance System.
-         \item Primary fields of expertise are in remote sensing and high-performance computing.  
-         \item Examples of tasks I have performed...
+         \item \textbf{SEIT Lead  (Systems Engineering, Integration, and Test), 2021 - Present}\\
          \begin{innerlist}
+            \item Long-Wave IR, Wide Area Surveillance DoD program.
+            \item Responsible for the integration, testing, and final delivery of the system.
+            \item Responsible for the development, tracking, and maintenance of all requirements.
+            \item I recently took the position in Fall of 2021 and am taking over responsiblities during the integration phase. \\
+         \end{innerlist}
+         
+         \item \textbf{Lead Developer, 2016 - 2021}
+         \item \textbf{Software Engineer, 2012 - 2016} 
+         \begin{innerlist}
+            \item Led the Image-Processing software team on the Gorgon-Stare Wide-Area Surveillance System.
             \item Designed and implemented ortho-image rendering algorithms for use on airborne systems as well as HPC clusters.
             \item Developed camera calibration process using feature detection and optimization algorithms.
             \item Designed and implemented image stabilization algorithms.
-            \item Create and write GIS data (still imagery, motion imagery, vector data) to desired formats
+            \item Created GIS data (still imagery, motion imagery, vector data) in formats
                   such as Pixia NUI, NITF, KML, MPEG/H264, Shapefiles, etc.
             \item Assisted in the development of new camera models for multi-camera sensors.
             \item Designed, written, and traced system and software requirements.  I've helped create and modify requirements to fulfill customer needs against technical constraints.
-            \item Significant test experience.  I've written test plans, test cards, and mapped test activities against system requirements.  I can boil down a complex activity such as measuring ground-location-accuracy of an ortho-image into a process test personnel can replicate and sign off on.
-         \item I have also developed and managed much of the build, 
-               unit-test, continuous-integration, and deployment infrastructure required by our team.
+            \item Significant test experience.  I've written test plans, test cards, and mapped test activities against system requirements. I can summarize a complex activity such as measuring Ground-Location-Accuracy (GLA) of an ortho-image into a process test personnel can replicate and sign-off on.
+         \item I configured and deployed a significant portion of the initial Continuous-Integration, unit-test, and deployment infrastructure 
+               required by our team.
          \item Assisted with development of OS security hardening procedures and ensured compliance with DoD Security 
                Technical Implementation Guides (STIGs) for Windows and Linux systems.
          \end{innerlist}
-         \item Active DOD security clearance.\\
+         \item Primary fields of expertise are in remote sensing and high-performance computing. 
+         \item I have an active DOD security clearance.
+         \item I am currently working on a DOD TS-SCI clearance (Waiting on interim). \\
      \end{outerlist}
+\clearpage
 
 %USAF
 \href{http://www.nv.ngb.army.mil/air/index.cfm}
@@ -268,9 +278,10 @@ Denver, CO, 80202
      \item Operation Enduring Freedom Deployment, Bagram AB, Afghanistan\\     
            August 2009 - December 2009
      \item Operation Iraqi Freedom Deployment, Talil AB, Iraq\\               
-           October 2007 - January 2008
+           October 2007 - January 2008\\
      \end{outerlist}
 %NASA
+
 \href{http://ti.arc.nasa.gov/tech/asr/intelligent-robotics/}
      {\textbf{Intern, Intelligent Robotics Group, NASA Ames Research Center}},\\
       Mountain View, CA \hspace{48mm}
@@ -291,7 +302,6 @@ Denver, CO, 80202
       \end{innerlist}
       \end{outerlist}
 
-\clearpage
 
 %CVL
 \href{http://www.cse.unr.edu/CVL/}
@@ -381,7 +391,6 @@ Reno, NV
         \end{innerlist}
 \end{outerlist}
 
-\clearpage
 %UNITED STATES AIR FORCE
 \href{http://www.af.mil/}{\textbf{Nevada Air National Guard}}
 152 Maintenance Squadron, 152 Air Wing, Reno, NV
@@ -413,14 +422,6 @@ Reno, NV
 
 \textbf{Mentor, Boys and Girls Club of Truckee Meadows}\\
     March 2015 - May 2016
-
-%**************************************************************
-%                      GROUPS
-%**************************************************************
-\section{Groups}
-\begin{outerlist}
-\item[] \href{http://www.cse.unr.edu/~acm/}{President, Association for Computing Machinery}, UNR  (Jan 2010 - May 2011)
-\end{outerlist}
 
 %**************************************************************
 %                   REFERENCES 
