Update to resume.

--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -234,12 +234,24 @@ Denver, CO, 80202
      Sierra Nevada Corporation, Englewood, CO\\
      January 2012 - Present
      \begin{outerlist}
-         \item \textbf{SEIT Lead  (Systems Engineering, Integration, and Test), 2021 - Present}\\
+         \item \textbf{Systems Engineering, Integration, and Test (SEIT) Lead, 2021 - Present}\\
          \begin{innerlist}
-            \item Long-Wave IR, Wide Area Surveillance DoD program.
-            \item Responsible for the integration, testing, and final delivery of the system.
-            \item Responsible for the development, tracking, and maintenance of all requirements.
-            \item I recently took the position in Fall of 2021 and am taking over responsiblities during the integration phase. \\
+            \item Long-Wave Infra-Red, Wide Area Motion Imagery (WAMI) Platform, DoD program.
+            \item Lead a team of 6 Systems Engineers, Scientists, and Program Coordinators.
+            \item Responsible for the integration, testing, and fielding of the platform.
+            \begin{innerlist}
+                \item Developed the test plan and test procedures to verify specific and targeted objectives. 
+                \item Coordinated and led flight test activities to ensure high-priority objectives were met. 
+                \item I have spent lots of time in aircraft hangars ensuring that the system works prior to high-risk test activities. 
+            \end{innerlist}
+            \item I am responsible for the development, tracking, and maintenance of all requirements.
+            \begin{innerlist}
+                    \item Developed many of the verification procedures for system and software requirements. 
+                    \item Verified all requirements per required methodology (ex:  flight tests, lab tests, and analysis/inspection reports).
+                    \item Verified derived requirements through subcontractors via similar methods. 
+            \end{innerlist}
+            \item I still write lots of code, as well as train others to write code, to help the Systems Engineering team to more efficiently achieve objectives.
+            \item I spend 80\% of my time putting out fires. 
          \end{innerlist}
          
          \item \textbf{Lead Developer, 2016 - 2021}
@@ -253,7 +265,7 @@ Denver, CO, 80202
                   such as Pixia NUI, NITF, KML, MPEG/H264, Shapefiles, etc.
             \item Assisted in the development of new camera models for multi-camera sensors.
             \item Designed, written, and traced system and software requirements.  I've helped create and modify requirements to fulfill customer needs against technical constraints.
-            \item Significant test experience.  I've written test plans, test cards, and mapped test activities against system requirements. I can summarize a complex activity such as measuring Ground-Location-Accuracy (GLA) of an ortho-image into a process test personnel can replicate and sign-off on.
+            \item Significant test experience.  I've written test plans, test cards, and mapped test activities against system requirements. I can summarize a complex activity such as measuring Ground-Location-Accuracy (GLA) of an ortho-image into a process which test personnel can replicate and sign-off on.
          \item I configured and deployed a significant portion of the initial Continuous-Integration, unit-test, and deployment infrastructure 
                required by our team.
          \item Assisted with development of OS security hardening procedures and ensured compliance with DoD Security 
@@ -333,7 +345,14 @@ Denver, CO, 80202
 
 \item{\textbf{Open-Source Projects Contributed:}}
     \begin{outerlist}
-    \item OpenCV, NASA Vision Workbench
+    \item OpenCV
+    \begin{innerlist}
+        \item Wrote the update to the imgcodec API to allow using GDAL to load GIS raster format.
+    \end{innerlist}
+    \item NASA Vision Workbench
+    \begin{innerlist}
+        \item Wrote underlying implementations of the Hough transform, Integral-Image, and other common CV methods. 
+    \end{innerlist}    
     \end{outerlist}
 
 \item{\textbf{System Administration}:} Configuration Management deployment (git, svn, Artifactory), constructing software build systems (Jenkins), and some networking to setup software labs.
